Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Account_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_By__c</fullName>
    <label>Account Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>