Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Activity_Tracker_2_0__c.field-meta.xml
<CustomField>
    <fullName>Activity_Tracker_2_0__c</fullName>
    <label>Activity Tracker 2.0</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own It</fullName>
            </value>
            <value>
                <fullName>Billing Paused</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>