Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Canada_2008_Lexpert_30__c.field-meta.xml
<CustomField>
    <fullName>Canada_2008_Lexpert_30__c</fullName>
    <label>Canada 2008 Lexpert 30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>