Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Firm_Dissolved__c.field-meta.xml
<CustomField>
    <fullName>Firm_Dissolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm Dissolved</label>
    <type>Checkbox</type>
</CustomField>