Doc/force-app/main/default/objects/Market_Snapshots__c/fields/IntApp_2008_Rank__c.field-meta.xml
<CustomField>
    <fullName>IntApp_2008_Rank__c</fullName>
    <label>IntApp 2008 Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>