Doc/force-app/main/default/objects/Market_Snapshots__c/fields/IntApp_630__c.field-meta.xml
<CustomField>
    <fullName>IntApp_630__c</fullName>
    <label>IntApp 630</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>