Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Market_Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Snapshot_Date__c</fullName>
    <label>Market Snapshot Date</label>
    <type>Date</type>
</CustomField>