Doc/force-app/main/default/objects/Market_Snapshots__c/fields/NLJ_2012_Rank__c.field-meta.xml
<CustomField>
    <fullName>NLJ_2012_Rank__c</fullName>
    <label>NLJ 2012 Rank</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>