Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Parent_Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Text__c</fullName>
    <label>Parent Account Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>