Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Record_Locator__c.field-meta.xml
<CustomField>
    <fullName>Record_Locator__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Record Locator</label>
    <type>AutoNumber</type>
</CustomField>