Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Recurring_per_Lawyer_Integration__c.field-meta.xml
<CustomField>
    <fullName>Recurring_per_Lawyer_Integration__c</fullName>
    <label>Recurring per Lawyer - Integration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>