Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Recurring_Per_Lawyer_Risk__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Per_Lawyer_Risk__c</fullName>
    <label>Recurring Per Lawyer - Risk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>