Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Security_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Security_Extensions__c</fullName>
    <label>Security Extensions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Own it</fullName>
            </value>
            <value>
                <fullName>Own Partial</fullName>
            </value>
            <value>
                <fullName>Billing Paused</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>