Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Simple_Industry__c.field-meta.xml
<CustomField>
    <fullName>Simple_Industry__c</fullName>
    <label>Simple Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>