Doc/force-app/main/default/objects/Market_Snapshots__c/fields/TB_Time_Entry_Toolkit__c.field-meta.xml
<CustomField>
    <fullName>TB_Time_Entry_Toolkit__c</fullName>
    <label>TB Time Entry Toolkit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Own it</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>