Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Time_Builder__c.field-meta.xml
<CustomField>
    <fullName>Time_Builder__c</fullName>
    <label>Time Builder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own It</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>