Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Unengaged_Status_Integration__c.field-meta.xml
<CustomField>
    <fullName>Unengaged_Status_Integration__c</fullName>
    <label>Unengaged Status (Integration)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>