Doc/force-app/main/default/objects/Market_Snapshots__c/fields/Unengaged_Status_Walls__c.field-meta.xml
<CustomField>
    <fullName>Unengaged_Status_Walls__c</fullName>
    <label>Unengaged Status (Walls)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>